Se arreglaron precios visibles index html y se linkeo correctamente loginAdmin al footer

--- a/css/index.css
+++ b/css/index.css
@@ -187,9 +187,10 @@ figure.opinionIndex.hover figcaption {
   } 
   .favTexto {
     position:absolute;
-    color: white;
+    color: #000000;
+    text-shadow: 0 0 5px #ffffff;
     font-weight: 400;
-    font-size: 16px;
+    font-size: 19px;
     align-self: end;
     margin: 0 0 20px 20px;
     letter-spacing: 0.5px;
